- expand jdocs for openapi generation
